--- a/index.html
+++ b/index.html
@@ -127,8 +127,32 @@
                     </div>
                 </a>
             </div>
+            <div class="sponsors">
+                <h1 class="sponsor-title">Our Sponspors</h1>
+                <p class="sponsor-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <div class="sponsor-icon">
+                    <div>
+                        <img src="images/sponsors/spotify.png" alt="">
+                    </div>
+                    <div>
+                        <img src="images/sponsors/amazon.png" alt="">
+                    </div>
+                    <div>
+                        <img src="images/sponsors/google.png" alt="">
+                    </div>
+                    <div>
+                        <img src="images/sponsors/telerama.png" alt="">
+                    </div>
+                    <div>
+                        <img src="images/sponsors/figma.png" alt="">
+                    </div>                    
+                </div>
+            </div>
         </section>
     </main>
+    <footer class="footer">
+        <p>All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
 
 </body>
 
