--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <p class="service-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                         </div>
                         <div class="service">
-                            <h4 class="service-title">Dexktop & Mobile Version</h4>
+                            <h4 class="service-title">Super Easy to Edit</h4>
                             <p class="service-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                         </div>
                         <div class="service">
