--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- css link -->
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="images/title.png">
 </head>
 
 <body>
@@ -31,6 +32,7 @@
                 </ul>
             </div>
         </nav>
+        <!-- banner -->
         <div class="banner">
             <h1 class="banner-title">Brand New<br>Group of Architects</h1>
             <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words which don't look even</p>
@@ -43,6 +45,7 @@
    <!--------------------------------------
          nav & Banner code end here 
     ---------------------------------------->
+
 
     <!--------------------------------------
         Features code start from here
@@ -97,7 +100,7 @@
             </div>
         </section>
      <!--------------------------------------
-        Features code start from here
+        Features code End here
      ---------------------------------------->
 
 
@@ -161,6 +164,10 @@
             ------------------------------------->
         </section>
     </main>
+
+    <!---------------------------
+            bonus section
+    ----------------------------->
     <div class="bonus-section">
         <h1 class="bonus-title">Newsletter</h1>
         <p class="bonus-desc">Subscribe to ur newsletter and follow our content closely. Receive news based on what has to do with you. We promise not to send promotions you don't like.</p>
@@ -169,8 +176,11 @@
             <input class="input2" type="email" placeholder="Your Email">
             <input class="input3" type="submit" value="Subscribe">
         </form>
-
     </div>
+    <!---------------------------
+            bonus section
+    ----------------------------->
+
     <footer class="footer">
         <p>All rights reserved copyright@2023 startup landing page design</p>
     </footer>
